force-app/main/default/objects/pse__Region_Plan__c/pse__Region_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RegionPlanHelp</customHelpPage>
    <description>Captures planned bookings, billings, costs, margin, revenue, and utilization for the region over a defined time period. Apart from services forecasting, fields on this object are not validated (other than for format) or used in any formulae. Regions and time periods have a master-detail relationship with region plans.</description>
    <label>Region Plan</label>
    <nameField>
        <displayFormat>RP-{0}</displayFormat>
        <label>Regional Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>